src/main/java/org/example/good/I/Service/IUserRegistrationInterface.java
package org.example.good.I.Service;

import org.example.good.I.DTO.RegistrationDTO;

public interface IUserRegistrationInterface {
    public RegistrationDTO userRegistration();
}
